--- a/Rocambulesque/public/css/app.css
+++ b/Rocambulesque/public/css/app.css
@@ -5,12 +5,24 @@ body {
 }
 
 header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
     background-color: #333;
     color: #fff;
-    padding: 10px;
+    padding: 15px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 100;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    margin-right: 10px;
+
 }
 
 .logo img {
@@ -34,82 +46,94 @@ header {
     border-radius: 10px;
     margin-right: 10px;
     padding: 10px 20px;
+
+
 }
 
+.logInBtn:hover {
+    border-style: solid;
+    border-color: #9b5c0b;
+}
 
 .svg-button {
     background: none;
     border: none;
     cursor: pointer;
 }
-    .background-image {
-        background-image: url('../images/bgimg.png');
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
 
-    .restaurant-photos {
-        max-width: 100%;
-        height: auto;
-        display: flex;
-        flex-direction: column; 
-        align-items: flex-start; 
-        margin: 0 auto;
-        padding: 20px;
-    }
+.background-image {
+    background-image: url('../images/bgimg.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+}
 
-
-    .restaurant-photos img {
-        max-width: 100%;
-        height: auto;
-        margin-bottom: 20px;
-        margin-top: 30px;
-        border-radius: 10px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-
-    }
+.photo-column {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 80px;
+    position: relative;
+}
 
 
-    .restaurant-photos img:nth-child(2) {
-        align-self: flex-end;
-    }
+.photo1 img,
+.photo2 img,
+.photo3 img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    align-self: flex-start;
+    margin: 0 0 -2px 0;
+    margin-top: -2em;
+}
 
+.photo2 img {
+    margin-left: 38em;
 
+}
 
-    .menu-button a,
-    .reservation-button a {
-        text-decoration: none;
-        background-color: #ffff;
-        color: #11c720;
-        padding: 10px 20px;
-        border-radius: 10px;
-        margin: 10px;
-        display: inline-block;
-        border-color: #ffff;
-        border-style: solid;
-    }
+.photo3 {
+    align-self: flex-start;
+    margin-bottom: 1em;
+}
 
-    .menu-button a:hover,
-    .reservation-button a:hover {
-        border-color: rgb(143, 98, 32);
-    }
+.menu-button,
+.reservation-button {
+    text-align: center;
+    position: absolute;
+    width: 10%;
+}
 
+.menu-button {
+    top: 25em;
+    left: 50em;
+}
 
-    .button-container {
-        text-align: center;
-        margin-bottom: 20px;
-    }
+.reservation-button {
+    bottom: 55em;
+    left: 20em;
 
-    .menu-button,
-    .reservation-button {
-        display: inline-block;
-        vertical-align: top;
-        margin-right: 20px;
-    }
+}
 
-    
+.menu-button a,
+.reservation-button a {
+    text-decoration: none;
+    background-color: #fff;
+    color: #11c720;
+    padding: 10px 20px;
+    border-radius: 5px;
+    display: block;
+}
+
+.menu-button a:hover,
+.reservation-button a:hover {
+    border-style: solid;
+    border-color: #9b5c0b;
+}
