--- a/Rocambulesque/public/css/app.css
+++ b/Rocambulesque/public/css/app.css
@@ -52,6 +52,22 @@ header {
 .logInBtn:hover {
     border-style: solid;
     border-color: #333;
+    background-color: #868686;
+
+}
+
+.RegisterBtn {
+    color: #11c720;
+    border-radius: 10px;
+    margin-right: 10px;
+    padding: 10px 20px;
+    font-weight: bold;
+}
+
+.RegisterBtn:hover {
+    border-style: solid;
+    border-color: #333;
+    background-color: #868686;
 
 }
 
