--- a/Rocambulesque/resources/scss/reservation.scss
+++ b/Rocambulesque/resources/scss/reservation.scss
@@ -10,3 +10,15 @@
 .error-text {
     font-size: 14px;
 }
+
+.success-message {
+    background-color: lightgreen;
+    color: white;
+    border-color: black;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.success-text {
+    font-size: 16px;
+}
