home page updates

--- a/Rocambulesque/public/css/navbar.css
+++ b/Rocambulesque/public/css/navbar.css
@@ -2,11 +2,14 @@
     background-color: #F2F2F2;
     padding: 10px;
     text-align: left;
-    box-shadow: 0 0 10px rgba(4, 191, 157, 0.3);
+    box-shadow: 0 0 10px rgba(4, 191, 157, 0.9);
     margin-left: 7rem;
     margin-right: 7rem;
     margin-top: 3rem;
-    border-radius: 100px;
+    border-bottom-right-radius:8px ;
+    border-top-right-radius: 8px ;
+    border-bottom-left-radius: 100px;
+    border-top-left-radius: 100px;
 }
 
 .navbar a{
@@ -20,8 +23,7 @@
     color: #40261d;
     box-shadow: 0 0 10px rgba(4, 191, 157, 0.3);
     transition: all 0.3s ease 0s;
-
-} 
+}
 
 .navbar a:hover {
     background-color: #40261d ;
@@ -29,7 +31,6 @@
     border-radius: 50px;
     border-color: #04BF9D ;
     transition: all 0.3s ease 0s;
-
 }
 
 .logo {
