--- a/Rocambulesque/public/css/klant.css
+++ b/Rocambulesque/public/css/klant.css
@@ -1,20 +1,27 @@
+
 body {
-    font-family: 'Goodbrush';
-    background-image: url(../images/bg1.jpg);
+    font-family: Arial, sans-serif;
+    background: rgb(188, 188, 188);
     margin: 0;
     padding: 0;
     text-align: center;
 }
+
+p{
+    font-size: large;
+}
+
 h1 {
     color: #40261d;
 }
+
 .container {
-    background-color: rgba(255, 255, 255, 0.50);
+    background-color:#F2F2F2;
+    box-shadow: 0 0 10px rgba(4, 191, 157, 0.9);
     max-width: 900px;
     margin: 20px auto;
     padding: 20px;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(4, 191, 157, 0.3);
     margin-top: 5rem;
 
 }
@@ -23,11 +30,11 @@ label {
 }
 .customer-info {
     margin-bottom: 3rem;
-    border-top: 1px solid #04BF9D;
+    border-top: 1px solid #40261d;
     padding-top: 20px;
 }
 .reservation-info {
-    border-top: 1px solid #04BF9D;
+    border-top: 1px solid #40261d;
     padding-top: 20px;
 }
 .buttons {
@@ -53,5 +60,24 @@ button.delete {
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
+    
+}
 
+.footer {
+    display: flex;
+    background-color: #F2F2F2;
+    padding: 10px;
+    box-shadow: 0 0 10px rgba(4, 191, 157, 0.3);
+    margin-left: 7rem;
+    margin-right: 7rem;
+    margin-top: 8rem;
+    margin-bottom: 3rem;
+    border-radius: 100px;
+    justify-content: space-around;
+}
+
+h3 {
+    margin: 30px 30px;
+    padding: 20px;
+    border-radius: 10px;    
 }
