--- a/Rocambulesque/public/css/navbar.css
+++ b/Rocambulesque/public/css/navbar.css
@@ -37,3 +37,48 @@
     width: 200px;
     cursor: pointer;
 }
+
+@media only screen and (max-width: 1170px) {
+    .navbar {
+        background-color: #F2F2F2;
+        padding: 5px;
+        text-align: left;
+        box-shadow: 0 0 10px rgba(4, 191, 157, 0.9);
+        margin-left: 3rem;
+        margin-right: 3rem;
+        margin-top: 3rem;
+        border-bottom-right-radius:8px ;
+        border-top-right-radius: 8px ;
+        border-bottom-left-radius: 100px;
+        border-top-left-radius: 100px;
+    }
+    .navbar a{
+        float: right;
+        margin: 35px 20px;
+        padding: 10px;
+        border-radius: 10px;
+        text-decoration: none;
+        background-color: #F2F2F2;
+        border: 2px solid #04BF9D;
+        color: #40261d;
+        box-shadow: 0 0 10px rgba(4, 191, 157, 0.3);
+        transition: all 0.3s ease 0s;
+    }
+    .navbar a:hover {
+        background-color: #40261d ;
+        color:#04BF9D;
+        border-radius: 50px;
+        border-color: #04BF9D ;
+        transition: all 0.3s ease 0s;
+    }
+    .logo {
+        width: 140px;
+        cursor: pointer;
+    }
+
+    a.log,
+    a.reg,
+    a.home{
+        display: none;
+    }
+}
