--- a/Rocambulesque/public/css/reserveringmaken.css
+++ b/Rocambulesque/public/css/reserveringmaken.css
@@ -12,7 +12,7 @@ body {
     left: -190px;
     width: 90%;
     height: 100%;
-    background-image: url(../images/bg1.jpg);
+    background-image: url(/images/bg1.jpg);
     background-size: cover;
     background-position: center;
     border-radius: 100px; /* Adjust the border radius as needed */
@@ -58,6 +58,10 @@ label {
 p{
     color: #40261d;
     font-size: larger;
+}
+
+.error {
+    color: red;
 }
 
 select, input[type="number"], input[type="date"], input[type="time"], textarea {
