--- a/Rocambulesque/public/css/footer.css
+++ b/Rocambulesque/public/css/footer.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'roboto';
+    src: url('../fonts/roboto/RobotoSlab-VariableFont_wght.ttf') format('ttf'),
+  }
+  
 .footer {
     display: flex;
     background-color: #F2F2F2;
@@ -10,4 +15,5 @@
     border-radius: 8px;
     justify-content: space-around;
     text-align: center;
+    font-family: 'roboto';
 }
