--- a/Rocambulesque/public/css/home.css
+++ b/Rocambulesque/public/css/home.css
@@ -37,10 +37,12 @@ body {
 h1 {
     font-family: 'goodbrush';
     font-size: 40px;
+    color: #40261d;
 }
 
 h2 {
     font-family: 'roboto';
+    color: #40261d;
 }
 
 .photo-column {
@@ -105,13 +107,13 @@ h2 {
 
 .main-content h1 {
     font-size: 24px;
-    color: #fff;
+    color: #40261d;
 }
 
 
 .main-content p {
     font-size: 18px;
-    color: #666;
+    color: #40261d;
 }
 
 table {
