--- a/Rocambulesque/public/css/edit.css
+++ b/Rocambulesque/public/css/edit.css
@@ -36,3 +36,19 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color: #45a049;
 }
+
+button[type="submit"] {
+    background-color: #4caf50;
+    color: white;
+    margin: 5%;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease-in-out;
+}
+
+button[type="submit"]:hover {
+    background-color: #3f8b43;
+}
