--- a/Rocambulesque/public/css/reserveringmaken.css
+++ b/Rocambulesque/public/css/reserveringmaken.css
@@ -12,7 +12,7 @@ body {
     top: 30px;
     left: -190px;
     width: 90%;
-    height: 100%;
+    height: 92%;
     background-image: url(/images/bg1.jpg);
     background-size: cover;
     background-position: center;
@@ -108,7 +108,7 @@ button {
     border-radius: 10px;
     padding: 20px;
     cursor: pointer;
-    font-family: 'roboto'; 
+    font-family: 'goodbrush'; 
     font-size: larger;
 }
 
