--- a/Rocambulesque/public/css/menu.css
+++ b/Rocambulesque/public/css/menu.css
@@ -118,6 +118,8 @@ body {
   }
 
   .menu-item img {
+    height: 200px;
+    object-fit: cover;
     width: 100%;
     border-radius: 8px;
     margin-bottom: 10px;
